<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.sparecode.vipul.onlynow.fragments.ResetFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sparecode.vipul.onlynow.widgets.LatoButton
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/orange"
            android:layout_marginBottom="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:text="@string/sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/button_signin"
            app:typeface="lato_bold"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/button3"
            android:gravity="center">

            <com.sparecode.vipul.onlynow.widgets.LatoTextView
                android:textColor="@color/headercolor"
                android:gravity="center"
                android:text="@string/checkemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:typeface="lato_bold"/>

            <com.sparecode.vipul.onlynow.widgets.LatoTextView
                android:gravity="center"
                android:text="@string/reset_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                app:typeface="lato_bold"/>
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>
